--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "fawn": "^2.1.5",
     "helmet": "^3.16.0",
     "joi": "^14.3.1",
+    "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.20",
     "morgan": "^1.9.1"
   }
